# food-scanner-python

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements-torch.txt  requirements.txt
app/: auth.py  config.py  main.py
app/models/: schemas.py
app/routers/: health.py  predict.py
app/services/: classifier.py  concept_utils.py  onnx_classifier.py  torch_classifier.py
scripts/: download_fixture.py  download_onnx_model.py  smoke_predict.py
tests/: conftest.py  test_concept_utils.py  test_health.py  test_predict.py
