[project]
name = "oq-food-vision"
version = "1.0.0"
description = "Food image classification microservice for OQ Agile Athletes"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that load the real Hugging Face model (slow)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
